# xmppsend

./: .gitignore  CMakeLists.txt  README.md  except.h  format.cpp  format.h  main.cpp  messenger.cpp  messenger.h  mucsender.cpp  mucsender.h  optional.h
cmake/: MyFind.cmake
etc/: example.cfg
getopt/: CMakeLists.txt  getopt.c  getopt.h  license.txt
